day-9/ingress-configs/eks_ingress_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sassational.bananabread.eks.io # Criado Através do Route53, também dá pra configurar através de uma "annotation" para criar um endpoint automaticamente caso o Cluster possua as permissões.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port: 
                  number: 80
