day-9/ingress-configs/ingress_2_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-static
  annotations: {}
spec:
  rules:
    - http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port: 
                  number: 5000
